[project]
name = "demo-uv-roboflow-trackers-bug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
cpu = [
    "torch==2.7.0+cpu",
    "torchvision==0.22.0+cpu", 
    "trackers[cpu] @ git+https://github.com/roboflow/trackers.git@main",
]

# cu124 = [
#     "torch",
#     "torchvision",
#     "trackers[cu124] @ git+https://github.com/roboflow/trackers.git@main",
# ]

cu124 = [
    "torch @ https://download.pytorch.org/whl/cu124/torch-2.7.0%2Bcu124-cp312-cp312-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.22.0%2Bcu124-cp312-cp312-linux_x86_64.whl",
    "trackers[cu124] @ git+https://github.com/roboflow/trackers.git@main",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true