[project]
name = "demo-uv-roboflow-trackers-bug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
cpu = [
    "torch==2.7.0+cpu",
    "torchvision==0.22.0+cpu", 
    "trackers[cpu] @ git+https://github.com/roboflow/trackers.git@main",
]

# cu124 = [
#     "torch",
#     "torchvision",
#     "trackers[cu124] @ git+https://github.com/roboflow/trackers.git@main",
# ]

cu124 = [
    "torch-cu124==2.7.0",  # alias package published on the cu124 index
    "torchvision-cu124==0.22.0",
    "trackers[cu124] @ git+https://github.com/roboflow/trackers.git@main",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch        = { index = "pytorch-cpu" }
torchvision  = { index = "pytorch-cpu" }
# alias packages are different names, so no conflict and no explicit pin needed

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url  = "https://download.pytorch.org/whl/cu124"